Changed formatted to String.format.